fix: updated spacing around profile title and selected plate animation (BC-29)

--- a/src/components/WeightControls/PlateSelector.css
+++ b/src/components/WeightControls/PlateSelector.css
@@ -2,13 +2,11 @@
     border: none;
     cursor: pointer;
     align-items: center;
-    /* height: 100px; */
 }
 
 .plate--button:hover {
-    width: 35px;
-    height: 170px;
     font-size: large;
+    opacity: 1;
 }
 
 .plate--button-selected {
