--- a/src/components/WeightControls/WeightControls.css
+++ b/src/components/WeightControls/WeightControls.css
@@ -9,6 +9,6 @@
     width: 95%;
     max-width: 768px;
     border-radius: 20px;
-    margin: 10px 0;
+    margin-bottom: 10px;
     background-color: #dedede;
 }
