--- a/src/components/WeightDisplay/WeightProfileTitle.css
+++ b/src/components/WeightDisplay/WeightProfileTitle.css
@@ -1,7 +1,6 @@
 .profile {
-    /* /* position: relative; */
-    /* display: flex; */
-    /* align-items: center; */
+    display: flex;
+    flex-direction: row;
 }
 
 .profile--hidden {
@@ -19,6 +18,7 @@
     height: 20px;
     min-width: 5px;
     padding: 2px 7px;
+    margin-left: 28px;
 }
 
 .profile--name:hover {
@@ -29,12 +29,4 @@
 .profile--name:focus {
     border: 2px solid #1976d2;
     border-radius: 3px;
-}
-
-/* Edit/Submit Button */
-
-.profile--icon {
-    position: block;
-    top: -28px;
-    left: 100%;
 }
